--- a/index.html
+++ b/index.html
@@ -24,24 +24,42 @@
             backdrop-filter: blur(10px);
             transition: all 0.3s ease;
         }
-        /* Custom scrollbar for glossy feel */
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #050505;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #1a1a1a;
-            border-radius: 10px;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #007BFF;
+        /* Custom scrollbar */
+        ::-webkit-scrollbar { width: 8px; }
+        ::-webkit-scrollbar-track { background: #050505; }
+        ::-webkit-scrollbar-thumb { background: #1a1a1a; border-radius: 10px; }
+        ::-webkit-scrollbar-thumb:hover { background: #007BFF; }
+
+        /* Error Overlay Style */
+        #error-display {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            right: 10px;
+            background: rgba(255, 0, 0, 0.1);
+            border: 1px solid red;
+            color: #ff4444;
+            padding: 15px;
+            border-radius: 8px;
+            font-family: monospace;
+            z-index: 9999;
+            display: none;
+            font-size: 12px;
         }
     </style>
     <script>
-      // Shim process.env for the browser to prevent crashes during API client initialization
+      // Shim process.env
       window.process = window.process || { env: { API_KEY: "" } };
+      
+      // Global error handler for debugging blank screens
+      window.onerror = function(msg, url, lineNo, columnNo, error) {
+        const display = document.getElementById('error-display');
+        if (display) {
+            display.style.display = 'block';
+            display.innerHTML += `<div>Error: ${msg} <br> At: ${url}:${lineNo}</div>`;
+        }
+        return false;
+      };
     </script>
 <script type="importmap">
 {
@@ -55,8 +73,9 @@
 </script>
 </head>
 <body>
+    <div id="error-display"></div>
     <div id="root"></div>
-    <!-- Explicitly load the index.tsx as a module -->
-    <script type="module" src="/index.tsx"></script>
+    <!-- Using relative path for better compatibility -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
